# ds-bunny

./: .gitignore  README.md  config.py  pyproject.toml
src/: rmq_queue.py  sender.py  worker.py
