[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dsbunny"
version = "2.0.0a0"
maintainers = [
    {name = "Eliza Guseva"}
]
license = {text = "BSD-3-Clause"}
description = "simple repeated task scheduler"

requires-python = ">=3.7"
dependencies = ["pika"]

[project.optional-dependencies]
gevent = ["gevent"]
tornado = ["tornado"]
twisted = ["twisted"]